[gd_scene load_steps=6 format=2]

[ext_resource path="res://Menu/MenuInicial.gd" type="Script" id=1]
[ext_resource path="res://Menu/Button_Padrao.tscn" type="PackedScene" id=2]
[ext_resource path="res://Minecraft.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Menu/FadeIn.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 3 )

[node name="Menu Inicial" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.454902, 0.52549, 0.584314, 1 )

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 1160.0
margin_bottom = 640.0

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_right = 1040.0
margin_bottom = 560.0
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_right = 518.0
margin_bottom = 560.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 43
alignment = 1

[node name="Play" parent="Menu/CenterRow/Buttons" instance=ExtResource( 2 )]
editor/display_folded = true
margin_top = 207.0
margin_right = 518.0
margin_bottom = 227.0

[node name="Label" parent="Menu/CenterRow/Buttons/Play" index="0"]
text = "Play"

[node name="Credits" parent="Menu/CenterRow/Buttons" instance=ExtResource( 2 )]
margin_top = 270.0
margin_right = 518.0
margin_bottom = 290.0

[node name="Label" parent="Menu/CenterRow/Buttons/Credits" index="0"]
text = "Credits"

[node name="Exit" parent="Menu/CenterRow/Buttons" instance=ExtResource( 2 )]
editor/display_folded = true
margin_top = 333.0
margin_right = 518.0
margin_bottom = 353.0

[node name="Label" parent="Menu/CenterRow/Buttons/Exit" index="0"]
text = "Exit
"

[node name="CenterContainer" type="CenterContainer" parent="Menu/CenterRow"]
editor/display_folded = true
margin_left = 522.0
margin_right = 1040.0
margin_bottom = 560.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="name" type="Label" parent="Menu/CenterRow/CenterContainer"]
margin_left = 156.0
margin_top = 254.0
margin_right = 362.0
margin_bottom = 305.0
custom_fonts/font = SubResource( 1 )
text = "OriJump"
align = 1
valign = 1

[node name="FadeIn" parent="." instance=ExtResource( 4 )]
visible = false
[connection signal="pressed" from="Menu/CenterRow/Buttons/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/Exit" to="." method="_on_Exit_pressed"]

[editable path="Menu/CenterRow/Buttons/Play"]

[editable path="Menu/CenterRow/Buttons/Credits"]

[editable path="Menu/CenterRow/Buttons/Exit"]
